compiler/hachi-tests/tests/snapshots/ui_tests__compiler_ui_tests@break_outside_loop.test.snap
---
source: compiler/hachi-tests/tests/ui_tests.rs
info:
  program: hcc
  args:
    - tests/ui/syntax/loop/break_outside_loop.test
input_file: compiler/hachi-tests/tests/ui/syntax/loop/break_outside_loop.test
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: sema::break_outside_loop

  × break statement outside of loop
   ╭─[tests/ui/syntax/loop/break_outside_loop.test:2:3]
 1 │ fn test() {
 2 │   break;
   ·   ───┬──
   ·      ╰── there is no enclosing loop
 3 │ }
   ╰────
